<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        android:contentDescription="@string/thumbnail_content_desc" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_placeholder"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/post_creation_date"
        app:layout_constraintStart_toEndOf="@id/thumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/author_placeholder"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subreddit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/subreddit_placeholder"
        app:layout_constraintTop_toTopOf="@id/author"
        app:layout_constraintStart_toEndOf="@id/author"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/int_placeholder"
        app:layout_constraintStart_toEndOf="@+id/score_icon"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/int_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/score" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/post_creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_placeholder"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/score_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@+id/score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/score"
        android:contentDescription="@string/staricon" />

    <ImageView
        android:id="@+id/comments_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_comment"
        app:layout_constraintBottom_toBottomOf="@+id/comments"
        app:layout_constraintEnd_toStartOf="@+id/comments"
        app:layout_constraintTop_toTopOf="@+id/comments"
        android:contentDescription="@string/comment_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>